project(JudyL)
include_directories(.)
if (MSVC)
    add_definitions(-DJU_WIN)
endif()
file(GLOB_RECURSE src *.c)
add_library (JudyL ${src})

if (MSVC)
    add_definitions(-D_SECURE_SCL=0 -D_HAS_EXCEPTIONS=0)
    set(CMAKE_C_FLAGS "/GS- /Zi" CACHE STRING "Common C compiler settings" FORCE)
    set(CMAKE_CXX_FLAGS "/GS- /Zi" CACHE STRING "Common C++ compiler settings" FORCE)
    set(CMAKE_C_FLAGS_DEBUG "/MTd /Od /D_DEBUG" CACHE STRING "Additional C compiler settings in Debug" FORCE)
    set(CMAKE_CXX_FLAGS_DEBUG "/MTd /Od /D_DEBUG" CACHE STRING "Additional C++ compiler settings in Debug" FORCE)
    set(CMAKE_C_FLAGS_RELEASE "/MT /O2 /Ob1 /DNDEBUG" CACHE STRING "Additional C compiler settings in Release" FORCE)
    set(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob1 /DNDEBUG" CACHE STRING "Additional C++ compiler settings in Release" FORCE)
endif()
